# CliMediaPlayer

./: CMakeLists.txt  MainLoop.cpp  README.md
DbHandler/: .cproject  .project  CMakeLists.txt  DbHandler.cpp  DbHandler.h
GstreamerLocal/: .cproject  .project  CMakeLists.txt  GstreamerImpl.cpp  GstreamerImpl.h
usbIndexer/: .cproject  .project  CMakeLists.txt  mediatypes.h  tester.cpp
usbIndexer/USBIndexer/: .cproject  .project  CoverartExtractor.cpp  CoverartExtractor.h  IBatchCallBack.h  MetaData.cpp  MetaData.h  mediascanner.cpp  mediascanner.h  metadatareader.cpp  metadatareader.h  printprogress.h  usbindexer.cpp  usbindexer.h
usbIndexer/database/: CMakeLists.txt  database.cpp  database.h
